--- a/main.css
+++ b/main.css
@@ -3,15 +3,24 @@
     padding: 0;
 }
 .title-2{
+    /* border: solid black; */
     display: flex;
     justify-content: space-between;
-    margin: 50px 50px;
+    margin: 50px auto;
+    width: 90%;
 }
-
-.image-container{
+.container{
     display: flex;
-    margin: 50px;
+    justify-content: center;
+}
+.image-container{
+    /* border: solid black; */
+    width: 90%;
+}
+.image-container2{
+    display: flex;
     justify-content: space-between;
+    margin: 50px auto;
 }
 .btn-1{
     background-color: #FFF;
