--- a/main.css
+++ b/main.css
@@ -91,6 +91,8 @@ body{
     width: 50%;
     height: 70%;
     padding: 40px;
+    padding-top: 100px;
+    padding-left: 100px;
     position: absolute;
     background-color: #fff;
     bottom: 0;
@@ -98,11 +100,11 @@ body{
 }
 
 .sect1__h2{
-    font-size: 30px;
+    font-size: 55px;
     font-weight: bold;
     text-transform: uppercase;
     margin: 0;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
     color: hsl(0, 0%, 41%);
 }
 
